# url-shortner

./: .gitignore  Cargo.toml  bun.lockb  package.json  readme.md
migrations/: 01_create_urls_table.sql
src/: index.ts  main.rs  types.ts
src/lib/: supabase.ts
