[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros"] }
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
